# cg2

./: .gitignore  CMakeLists.txt  README.md  cg2.pro  cow.off  torus.off
include/cg2/: .Image.hpp.swp  .Scene.hpp.swp  .Vector.hpp.swp  .misc.hpp.swp  BoundingBox.hpp  Bounds.hpp  Camera.hpp  Color.hpp  Compound.hpp  FrameBuffer.hpp  GCode.hpp  GCodeGenerator.hpp  Image.hpp  ImplicitSurface.hpp  ImpliciteSurface.hpp  KDTree.hpp  Light.hpp  Median.hpp  Mesh.hpp  MeshReader.hpp  MeshWriter.hpp  OFFReader.hpp  OFFWriter.hpp  Object.hpp  Plane.hpp  PointCloud.hpp  PointCloud2D.hpp  PolygonMesh.hpp  Primitive.hpp  Ray.hpp  Scene.hpp  SceneObject.hpp  Shader.hpp  SlicableMesh.hpp  Slice.hpp  Slicer.hpp  Sphere.hpp  Triangle.hpp  TriangleMesh.hpp  Vector.hpp  (+4 more)
src/cg2ex1/: .MainWindow.cpp.swn  .glwidget.h.swn  MainWindow.cpp  MainWindow.h  Makefile  glwidget.cpp  glwidget.cpp~  glwidget.h  helper.h  main._cpp  main.cpp  moc_MainWindow.cpp  moc_MainWindow.cxx  moc_glwidget.cpp  moc_glwidget.cxx  ui_MainWindow.h
src/cg2ex2/: MainWindow.cpp  glwidgetex2.cpp  glwidgetex2.h  mainex2.cpp  mainwindowex2.cpp  mainwindowex2.h
src/cg2ex3/: glwidgetex3.cpp  glwidgetex3.h  mainex3.cpp  mainwindowex3.cpp  mainwindowex3.h
src/cg2ex4/: glwidgetex4.cpp  glwidgetex4.h  mainex4.cpp  mainwindowex4.cpp  mainwindowex4.h
src/lib/: .Plane.cpp.swp  .Polygon.cpp.swp  .Scene.cpp.swp  .Shader.cpp.swp  .Shader.cpp.swp (Case Conflict 1)  .Triangle.cpp.swp  BoundingBox.cpp  Bounds.cpp  Camera.cpp  Image.cpp  ImplicitSurface.cpp  ImpliciteSurface.cpp  Mesh.cpp  OFFReader.cpp  OFFWriter.cpp  Plane.cpp  PointCloud.cpp  PointCloud2D.cpp  Polygon.cpp  PolygonMesh.cpp  Ray.cpp  Scene.cpp  Shader.cpp  Slicer.cpp  Sphere.cpp  Triangle.cpp  TriangleMesh.cpp  Vector.cpp  Vertex.cpp  VoxelGrid.cpp  grid.cpp  image.cpp  scene.cpp  shader.cpp
src/test/: MeshTest.cpp  medianTest.cpp  mediantest.cpp  (+1 more)
